--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: dacpac
-        path: Implementation/Data/RegistryDatabase/bin/Debug/netstandard2.0
+        path: Implementation/Data/RegistryDatabase/bin/Debug/netstandard2.0/RegistryDatabase.dacpac
 
   deploy: 
     needs: build
