--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  id-token: write
+  contents: read
+      
 jobs:
   build:
 
@@ -37,9 +41,6 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
 
-    permissions:
-      id-token: 'write'
-
     steps:                
       - name: download dacpac
         uses: actions/download-artifact@v4
@@ -52,6 +53,13 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
 
       - name: Azure SQL Deploy
         uses: Azure/sql-action@v2.1
